--- a/JustJava/app/src/main/res/values/strings.xml
+++ b/JustJava/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">Just Java</string>
+    <string name="max_cup_msg">Maximum of 100 cups!</string>
+    <string name="min_cups_msg">Cannot order negative cups!</string>
+    <string name="mailTo">mailto:</string>
+    <string name="order_subject">Just Java order for </string>
+    <string name="name">Name: </string>
+    <string name="hint_name">Name</string>
+    <string name="add_cream">Add Whipped Cream? </string>
+    <string name="add_chocolate">Add Chocolate? </string>
+    <string name="quantity">Quantity: </string>
+    <string name="total">Total: $</string>
+    <string name="thanks">Thank you!</string>
+    <string name="new_line">\n</string>
+    <string name="toppings">Toppings</string>
+    <string name="whipped_cream">Whipped Cream</string>
+    <string name="chocolate">Chocolate</string>
+    <string name="quantity_header">Quantity</string>
+    <string name="order">Order</string>
+
 </resources>
