Added Author to the news reader v1. V2 is a wreck in progress

--- a/newsreaderv1/app/src/main/res/values/strings.xml
+++ b/newsreaderv1/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="headline_placeholder">Headline goes here...</string>
     <string name="date_placeholder">Mar 6, 2010</string>
     <string name="section_ph">Section</string>
+    <string name="author_goes_here">Author goes here</string>
 </resources>
