--- a/NewsReaderV2/app/src/main/res/values/strings.xml
+++ b/NewsReaderV2/app/src/main/res/values/strings.xml
@@ -8,20 +8,21 @@
     <string name="headline_placeholder">Headline goes here...</string>
     <string name="date_placeholder">Mar 6, 2010</string>
     <string name="section_ph">Section</string>
+    <string name="author_goes_here">Author goes here</string>
     <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
     <string name="settings_menu_item">Settings</string>
     <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
     <string name="settings_title">News Settings</string>
 
     <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
-    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
-    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
-    <string name="settings_min_magnitude_default" translatable="false">6</string>
+    <string name="settings_number_of_articles_label">Number of Articles (max = 50)</string>
+    <string name="settings_number_of_articles_key" translatable="false">page-size</string>
+    <string name="settings_number_of_articles_default" translatable="false">15</string>
 
     <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
     <string name="settings_order_by_label">Order By</string>
-    <string name="settings_order_by_key" translatable="false">order_by</string>
-    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>
+    <string name="settings_order_by_key" translatable="false">order-by</string>
+    <string name="settings_order_by_default" translatable="false">relevance</string>
 
     <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
     <string name="settings_order_by_relevance_label">Relevance</string>
@@ -29,5 +30,5 @@
 
     <!-- Label for order-by date option [CHAR LIMIT=20] -->
     <string name="settings_order_by_date_label">Date</string>
-    <string name="settings_order_by_date_value" translatable="false">date</string>
+    <string name="settings_order_by_date_value" translatable="false">newest</string>
 </resources>
