--- a/BookStoreV2/app/src/main/res/values/strings.xml
+++ b/BookStoreV2/app/src/main/res/values/strings.xml
@@ -78,4 +78,7 @@
 
     <!-- Text hint for the book supplier telephone number [CHAR LIMIT=30] -->
     <string name="hint_supplier_phone">Supplier Telephone</string>
+    <string name="reorder">Reorder</string>
+    <string name="decrement">-</string>
+    <string name="increment">+</string>
 </resources>
