trying to implement data validation but it does not work yet

--- a/BookStoreV2/app/src/main/res/values/strings.xml
+++ b/BookStoreV2/app/src/main/res/values/strings.xml
@@ -87,4 +87,5 @@
     <string name="telephone_prefix">Tel: </string>
     <string name="button_placeholder_text">Sale</string>
     <string name="sell_one">Sell 1</string>
+    <string name="all_fields_required">Values are REQUIRED for all fields</string>
 </resources>
